# mymath

./: INSTRUCTION_TO_BUILD_PACKAGE.md  README.md  pyproject.toml
mymath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
